# mobile-apps

./: .gitignore  BUDDYPLAY-FEATURES.md  CARD-FEATURES.md  CHANGELOG.md  CODEOWNERS  DESIGN.md  DRIFT-FEATURES.md  IMPLEMENTATION-AUDIT.md  KEYBOARD.md  LICENSE  OBSERVABILITY.md  OFFLINE-AI-FEATURES.md  PRIVACY.md  PRODUCTION.md  QUICKSTART.md  README.md  RELEASE-VIDEO-SCRIPT.md  RELEASING.md  SAFETY.md  SENTRY.md  SIGNING.md  STORE-PACKAGING.md  TESTING.md  WORKOUT-MEDIA.md  codecov.yml  index.html  release.config.json  robots.txt  script.js  styles.css
.github/workflows/: android.yml  backend.yml  ci.yml  deploy.yml  desktop.yml  expo.yml  ios.yml  marketing.yml  pre-release-tests.yml  release-binaries-only.yml  release.yml
android/: README.md  build.gradle.kts  gradle.properties  keystore.properties.example  settings.gradle.kts
android/app/: README.md  build.gradle.kts
android/core/: build.gradle.kts
apps/Offline-AI-Buddy/android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  llama_jni_stub.cpp
backend/: README.md
desktop/: electron-builder.yml  package.json  preload.js
distribution/: SUBMISSION-CHECKLIST.md  app-privacy.json  data-safety.json
ios/: README.md  SIGNING.md  project.yml
mobile/: jest.setup.js  package.json
scripts/: bump-version.sh  link-supabase.sh  release-dry-run.sh  run-android-emulator.sh  run-ios-sim.sh  run-wear-emulator.sh  test-all.sh  verify-release-config.sh
server/: db.js  package-lock.json  package.json  server.js
watch/: project.yml
watchos/: README.md
wearos/: README.md  settings.gradle.kts
(+1740 files in other folders)
